[package]
name = "example"
authors = ["Nep <spica@starry.blue>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tvtest = { path = "../sdk" }

[dependencies.enumflags2]
version = "0.7"

[dependencies.windows]
version = "0.30"
features = [
    "alloc",
    "Win32_Foundation",
]
