[package]
name = "tvtest"
authors = ["Nep <spica@starry.blue>"]
version = "0.1.0"
edition = "2021"

[dependencies]
enumflags2 = "0.7"
num_enum = "0.5"

[dependencies.windows]
version = "0.37"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
]
